--- a/Demo4DotNetCore/Demo4DotNetCore.AuthorizationServer/Demo4DotNetCore.AuthorizationServer.csproj
+++ b/Demo4DotNetCore/Demo4DotNetCore.AuthorizationServer/Demo4DotNetCore.AuthorizationServer.csproj
@@ -7,18 +7,22 @@
 
   <ItemGroup>
     <Compile Remove="Model\CustumIdentityContext.cs" />
+    <Compile Remove="Model\PaginatedListExtensions.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.3.2" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.3.0" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="2.3.2" />
+    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="1.1.15" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="NLog" Version="4.5.11" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.8.18" />
   </ItemGroup>
 
   <ItemGroup>
