--- a/Demo4Angular/package.json
+++ b/Demo4Angular/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^7.1.4",
     "angular-oauth2-oidc": "^5.0.2",
     "core-js": "^2.6.1",
+    "date-fns": "^1.30.1",
     "ng-zorro-antd": "^7.0.0-rc.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
