api resources complete basicly

--- a/Demo4DotNetCore/Demo4DotNetCore.AuthorizationServer/NLog.config
+++ b/Demo4DotNetCore/Demo4DotNetCore.AuthorizationServer/NLog.config
@@ -4,7 +4,7 @@
       autoReload="true"
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log" >
-  <variable name="logDirectory" value="${basedir}/logs"/>
+  <variable name="logDirectory" value="logs"/>
   <targets>
     <target name="DebugLog" xsi:type="File" encoding="utf-8" layout="${longdate} ${logger} ${message}" fileName="${logDirectory}/${shortdate}.log" />
   </targets>
