--- a/Demo4DotNetCore/Demo4DotNetCore.AuthorizationServer/Demo4DotNetCore.AuthorizationServer.csproj
+++ b/Demo4DotNetCore/Demo4DotNetCore.AuthorizationServer/Demo4DotNetCore.AuthorizationServer.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="NLog" Version="4.5.11" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.7.0" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.8.18" />
   </ItemGroup>
 
@@ -31,6 +32,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Demo4DotNetCore.Tools\Demo4DotNetCore.Tools.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
