--- a/Demo4DotNetCore/Demo4DotNetCore.ResourceServer/Demo4DotNetCore.ResourceServer.csproj
+++ b/Demo4DotNetCore/Demo4DotNetCore.ResourceServer/Demo4DotNetCore.ResourceServer.csproj
@@ -21,12 +21,18 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="NLog" Version="4.5.11" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.7.0" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.8.18" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Demo4DotNetCore.Tools\Demo4DotNetCore.Tools.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
