--- a/Demo4DotNetCore/Demo4DotNetCore.ResourceServer/NLog.config
+++ b/Demo4DotNetCore/Demo4DotNetCore.ResourceServer/NLog.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log" >
-  <variable name="logDirectory" value="${basedir}/logs"/>
+  <variable name="logDirectory" value="logs"/>
   <targets>
     <target name="DebugLog" xsi:type="File" encoding="utf-8" layout="${longdate} ${logger} ${message}" fileName="${logDirectory}/${shortdate}.log" />
   </targets>
