--- a/Demo4DotNetCore/Demo4DotNetCore.AuthorizationServer/Demo4DotNetCore.AuthorizationServer.csproj
+++ b/Demo4DotNetCore/Demo4DotNetCore.AuthorizationServer/Demo4DotNetCore.AuthorizationServer.csproj
@@ -43,4 +43,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\AspNetIdentity.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
