--- a/Demo4DotNetCore/Demo4DotNetCore.ResourceServer/appsettings.json
+++ b/Demo4DotNetCore/Demo4DotNetCore.ResourceServer/appsettings.json
@@ -1,11 +1,17 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Data/resource.db;"
+    "DefaultConnection": "Data Source=Data/Resource.db;"
+  },
+  "Authority": {
+    "Issue": "http://192.168.11.12:5000",
+    "ApiName": "resapi"
   }
 }
