--- a/Demo4Angular/package.json
+++ b/Demo4Angular/package.json
@@ -19,12 +19,14 @@
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "^7.1.4",
     "@angular/router": "^7.1.4",
+    "@types/uuid": "^3.4.4",
     "angular-oauth2-oidc": "^5.0.2",
     "core-js": "^2.6.1",
     "date-fns": "^1.30.1",
     "ng-zorro-antd": "^7.0.0-rc.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
